--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,3 @@
-
 <div class="header-wrapper">
     <div class="letters-row">
         <i (click)="onHelpClick()" class="icon fa-regular fa-lg fa-circle-question"></i>
@@ -11,12 +10,11 @@
         <square [header]="true" letter="O"></square>
         <square [header]="true" letter="R"></square>
         <square [header]="true" letter="D"></square>
-        <!-- <i (click)="onSettingsClick()" class="icon fa-solid fa-lg fa-rotate-right"></i> -->
         <div class="row">
             <div class="col">
                 <div ngbDropdown class="d-inline-block">
                 <i class="fa-solid fa-bars" id="dropdownBasic1" ngbDropdownToggle></i>
-                <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                <div class="noselect" ngbDropdownMenu aria-labelledby="dropdownBasic1">
                     <button (click)="onMenuPress('practice')" ngbDropdownItem>Practice mode</button>
                     <button (click)="onMenuPress('settings')" ngbDropdownItem>Settings</button>
                     <button (click)="onMenuPress('stats')" ngbDropdownItem>Statistics</button>
