--- a/src/app/keyboard/keyboard.component.scss
+++ b/src/app/keyboard/keyboard.component.scss
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     height: 58px;
-    background-color: #EFEFEF;
+    background-color: var(--keyboard-button-default-color);
     border-radius: 3px;
     font-size: 1rem;
     margin-right: 3px;
@@ -25,6 +25,6 @@
     //have to have this bc otherwise the back button shows up as blue on iOS
     //no idea why
     i { 
-        color: black !important;
+        color:var(--keyboard-button-label-color) !important;
     }
 }
