--- a/src/app/keyboard/keyboard.component.scss
+++ b/src/app/keyboard/keyboard.component.scss
@@ -12,7 +12,8 @@
     background-color: var(--keyboard-button-default-color);
     border-radius: 3px;
     font-size: 1rem;
-    margin-right: 3px;
+    margin-right: 2.5px;
+    margin-left: 2.5px;
     width: fit-content;
     padding: 10px;
     cursor: pointer;
