--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,8 +11,8 @@
 
 .icon{
     margin-top: 23px;
-    margin-left: 18px;
-    margin-right: 18px;
+    margin-left: 2%;
+    margin-right: 3%;
     cursor: pointer;
 }
 
@@ -23,11 +23,14 @@ square:last-of-type{
     border-right: 1px solid var(--square-border-color);
 }
 
+.menu{
+    margin-left: 3%;
+    margin-right: 2%;
+    margin-top: 13px;
+}
+
 .fa-bars{
     font-size: 20px;
-    margin-left: 18px;
-    margin-right: 18px;
-    margin-top: 13px;
 
     &:hover{
         cursor: pointer;
