--- a/src/app/tutorial/tutorial.component.scss
+++ b/src/app/tutorial/tutorial.component.scss
@@ -5,7 +5,7 @@ $divider-color: #ccc;
 }
 
 square:last-of-type{
-    border-right: 1px solid black
+    border-right: 1px solid var(--tutorial-square-border-color);
 }
 
 h5{
@@ -31,6 +31,7 @@ square::ng-deep {
         .square {
             background-color: var(--tutorial-square-color);
             border: 1px solid var(--tutorial-square-border-color);
+            border-right: none;
         }
         
 }
