--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -50,7 +50,7 @@ canvas {
 }
 
 square:last-of-type{
-  border-right: 1px solid var(--tutorial-square-border-color);
+  border-right: 1px solid var(--square-border-color);
 }
 
 .letters-wrapper{
