--- a/src/app/tutorial/tutorial.component.html
+++ b/src/app/tutorial/tutorial.component.html
@@ -2,7 +2,7 @@
     <i (click)="closeEvent()" class="close-icon fa-solid fa-xl fa-xmark"></i>
     <h5>How to play</h5>
     <p>
-      Advance through all seven levels of the Crawsword before you run out of guesses.
+      Crawsword is a daily word game where players have ten attempts to answer seven crossword clues. Feedback for each guess is given in the form of colored tiles to indicate if letters match the correct position.
     </p>
     <p>
       Each level contains a single crossword clue to solve. The clues become harder as you advance throught the levels.
