--- a/src/app/square/square.component.scss
+++ b/src/app/square/square.component.scss
@@ -28,9 +28,32 @@
         }
     }
 
+    
+
+    @media (min-width: 374.99px) { //iphone 5
+
+        &.header{
+            width: 29px !important;
+            height: 29px !important;
+            background-color: var(--header-square-color);
+            
+            .letter {
+                font-size: 1.17rem !important;
+                margin-top: 5px !important;
+            }
+            .clue-number{
+                font-size: 0.48rem !important;
+            }
+        }
+    
+        }
+    @media (max-width: 374.98px) { //iphone 5
+
     &.header{
-        width: 29px !important;
+        width: 27px !important;
         height: 29px !important;
+
+
         background-color: var(--header-square-color);
         
         .letter {
@@ -41,6 +64,10 @@
             font-size: 0.48rem !important;
         }
     }
+
+    }
+
+    
 
 
     .letter{
@@ -152,6 +179,109 @@
             }
             .clue-number{
                 font-size: 0.32rem;
+            }
+        }
+    }
+}
+
+
+@media (max-width: 374.98px) { //iphone 5
+    
+    .square{
+        &.letters-7{
+            width: 36px;
+            height: 36px;
+            .letter {
+                font-size: 1.6rem;
+            }
+            .clue-number{
+                font-size: 0.59rem;
+            }
+        }
+        &.letters-8{
+            width: 34px;
+            height: 34px;
+            .letter {
+                font-size: 1.5rem;
+            }
+            .clue-number{
+                font-size: 0.59rem;
+            }
+        }
+        &.letters-9{
+            width: 32px;
+            height: 32px;
+            .letter {
+                font-size: 1.4rem;
+            }
+            .clue-number{
+                font-size: 0.53rem;
+            }
+        }
+        &.letters-10{
+            width: 28px;
+            height: 28px;
+            .letter {
+                font-size: 1.3rem;
+                margin-top: 7px;
+            }
+            .clue-number{
+                font-size: 0.48rem;
+            }
+        }
+        &.letters-11{
+            width: 26px;
+            height: 26px;
+            .letter {
+                font-size: 1.2rem;
+                margin-top: 6px;
+            }
+            .clue-number{
+                font-size: 0.43rem;
+            }
+        }
+        &.letters-12{
+            width: 24px;
+            height: 24px;
+            .letter {
+                font-size: 1.1rem;
+                margin-top: 5px;
+            }
+            .clue-number{
+                font-size: 0.4rem;
+            }
+        }
+        &.letters-13{
+            width: 22px;
+            height: 22px;
+            .letter {
+                font-size: 1.05rem;
+                margin-top: 5px;
+            }
+            .clue-number{
+                font-size: 0.37rem;
+            }
+        }
+        &.letters-14{
+            width: 20px;
+            height: 20px;
+            .letter {
+                font-size: 0.9rem;
+                margin-top: 5px;
+            }
+            .clue-number{
+                font-size: 0.34rem;
+            }
+        }
+        &.letters-15{
+            width: 19px;
+            height: 19px;
+            .letter {
+                font-size: 0.85rem;
+                margin-top: 5px;
+            }
+            .clue-number{
+                font-size: 0.34rem;
             }
         }
     }
