--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -18,3 +18,20 @@ h5{
     margin-top: 12px;
     margin-right: -12px;
 }
+
+.question{
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.answer{
+    margin-bottom: 30px;
+}
+
+.footer{
+    color: #bbb;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    padding-bottom: 10px;
+}
