--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -25,6 +25,6 @@
     </div>
     <div class="setting-row">
       <div class="setting-label">Questions?</div>
-      <a href="https://twitter.com/crawsword" class="link-right">FAQ</a>
+      <a href="#" (click)="faqEvent()" class="link-right">FAQ</a>
     </div>
 </div>
