--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,12 +2,48 @@
     <i (click)="closeEvent()" class="close-icon fa-solid fa-xl fa-xmark"></i>
     <h5>About</h5>
     <p>
-        Advance through all seven levels of the Crawsword before you run out of guesses.
-      </p>
-      <p>
-        Each level contains a single crossword clue to solve. The clues become harder as you advance throught the levels.
-      </p>
-      <p class="last">
-        If you check and your answer is wrong, a guess will be used up and the color of the tiles will change to show how close your guess was to the answer.
-      </p>
+        Crawsword is a daily word game where players have ten attempts to answer seven Crossword clues.</p>
+    <p class="last">
+        Feedback for each guess is given in the form of colored tiles to indicate if letters match the correct position. To learn more about how to play, <a href="#" (click)="toggleHelpEvent()">click here</a>.</p>
+    <p>
+
+    <p class="question">
+        Where do the clues for Crawsword come from?
+    </p>
+    <p class="answer">
+        The clues in Crawsword are real crossword clues that have appeared in real publications. The clues are from modern puzzles (2017 and later).
+    </p>
+
+    <p class="question">
+        The clue/answer I just got doesn't make any sense! What gives?
+    </p>
+    <p class="answer">
+        Sometimes crossword clues are part of a greater puzzle theme, and do not make sense by themselves. Most of these themed clues have been removed from the clue database, but if you encounter a bad clue, please <a href="mailto:wecraw.industries@gmail.com?subject=Crawsword%20Feedback">provide feedback</a> so that it can be removed. 
+    </p>
+
+    <p class="question">
+        Why does the game lets me enter in anything, even total jibberish?
+    </p>
+    <p class="answer">
+        Crossword answers can be anything, not just dictionary words! They can be short phrases, proper names and nouns, roman numerals, etc. Therefore, the game lets you type in anything for your answer. Guess carefully! 
+    </p>
+
+    <p class="question">
+        How did you make Crawsword?
+    </p>
+    <p class="answer">
+        Check out the <a href="https://github.com/wecraw/crossfire">source code</a> on GitHub.
+    </p>
+
+    <p class="question">
+        How do I get better at Crawsword?
+    </p>
+    <p class="answer">
+        Do lots of crossword puzzles! Or play a lot of Crawsword in practice mode!
+    </p>
+
+    <p class="footer">
+        ©2022 Will Crawford
+    </p>
+        
 </div>
